main/kubernetes/mysql-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-proxy-ingress
spec:
  entryPoints:
    - mysql
  routes:
    - match: HostSNI(`8e4a795832c41ea2e77f24253d8a385a-taqasta.mysql.teq.wiki`)
      services:
        - name: mysql-service
          port: 3306
  tls:
    secretName: mysql-proxy-ingress-cert-secret
